--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: # the website title (if blank, full name will be used instead)
 first_name: Honggeun
-middle_name: #
+middle_name: R
 last_name: Kim
 email: hgkim@mit.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
